# data-anom

./: .env.example  .gitignore  .project-metadata.yaml  README.md  cdsw-build.sh  launch_app.py  pyproject.toml  requirements-cml.txt  requirements.txt
app/: __init__.py  api.py  main.py
app/components/: __init__.py  ui_components.py
app/services/: __init__.py  cdp_connector.py  cml_connector.py  data_profiler.py  llm_detector.py  spark_connector.py  synthetic_generator.py  tokenizer.py
app/templates/: index.html
app/utils/: __init__.py  helpers.py
config/: __init__.py  settings.py
